# pandas_spss

./: .gitignore  README.md  Taskfile.yml  jupyter_config.py  pyproject.toml  tox.ini
notebooks/: README.md  pandas_spss_demo.ipynb
scripts/: run-tox.sh  start-jupyter.sh
src/: __init__.py  main.py
tests/: test_main.py
