[project]
name = "pandas-spss"
version = "0.1.0"
description = "A Python project using pandas with uv package manager"
authors = [
    {name = "Chaim Turkel", email = "cyturel@gmail.com"}
]
dependencies = [
    "pandas>=2.3.2",
    "numpy>=2.3.2",
]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.1",
    "black>=25.1.0",
    "flake8>=7.3.0",
    "mypy>=1.17.1",
    "tox>=4.0.0",
]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
